Bug 921609 - Annotate system manufacturer in crash reports. r=jimm